--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <title>MATT - Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+      </style>
 </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <div class="titulo">
-    <h1>TEXTO AQUí</h1>
+    <h1>MATT - Portfolio</h1>
   </div>
   <div class="contenedor">
 <br>
   <img src="assets/img/selfie1.jpg" alt="selfie1" class=foto>
-  <p class="aside">Hola, esta es una fotito mia cuak</p>
+  <p class="aside mt-5">Hola, esta es una fotito mia cuak</p>
   <br>
   <p></p>
   </div>
