--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>MATT - Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
-      </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -18,8 +18,18 @@
   <div class="contenedor">
 <br>
   <img src="assets/img/selfie1.jpg" alt="selfie1" class=foto>
-  <p class="aside mt-5">Hola, esta es una fotito mia cuak</p>
-  <br>
+  <div class="aside mt-5">
+  <p>Hola, soy Matte.
+    <br>
+      Hago fotos desde el 2019 y videos desde principios de este año (2024). 
+  </p>
+    <p>
+      La foto de la izq. es una selfie que hice hace poco tiempo con uno de mis outfits favs.
+      <br>
+      :)
+    </p>
+</div>
+
   <p></p>
   </div>
   <br>
